<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>fr.recia</groupId>
    <artifactId>sympa-api</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>sympa-api</name>
    <inceptionYear>2026</inceptionYear>
    <url/>
    <licenses>
      <license>
        <name>Apache License, Version 2.0</name>
        <url>http://www.apache.org/licenses/LICENSE-2.0</url>
      </license>
  </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
  <distributionManagement>
    <repository>
      <id>esco-releases</id>
      <url>https://nexus.recia.dev/content/repositories/releases/</url>
    </repository>
    <snapshotRepository>
      <id>esco-snapshots</id>
      <url>https://nexus.recia.dev/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>
    <dependencies>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-cas</artifactId>
            <version>5.7.2</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-tomcat</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>13.0</version>
            <scope>compile</scope>
        </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-data-redis</artifactId>
      </dependency>
      <dependency>
        <groupId>org.springframework.session</groupId>
        <artifactId>spring-session-data-redis</artifactId>
      </dependency>
      <dependency>
        <groupId>axis</groupId>
        <artifactId>axis</artifactId>
        <version>1.4</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish</groupId>
        <artifactId>javax.xml.rpc</artifactId>
        <version>10.0-b28</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-cache</artifactId>
      </dependency>
      <dependency>
        <groupId>org.springframework.ldap</groupId>
        <artifactId>spring-ldap-core</artifactId>
      </dependency>

      <!-- Source: https://mvnrepository.com/artifact/org.hibernate/hibernate -->
      <!-- Source: https://mvnrepository.com/artifact/org.springframework/spring-hibernate3 -->
<!--      <dependency>-->
<!--        <groupId>org.springframework</groupId>-->
<!--        <artifactId>spring-hibernate3</artifactId>-->
<!--        <version>2.0.8</version>-->
<!--        <scope>compile</scope>-->
<!--      </dependency>-->
      <!-- Source: https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
      <dependency>
        <groupId>org.springframework.data</groupId>
        <artifactId>spring-data-jpa</artifactId>
      </dependency>
      <!-- Source: https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-persistence -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-data-jpa</artifactId>
      </dependency>
      <dependency>
        <groupId>org.mariadb.jdbc</groupId>
        <artifactId>mariadb-java-client</artifactId>
      </dependency>
    </dependencies>

    <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>axistools-maven-plugin</artifactId>
            <version>1.3</version>
            <configuration>
              <packageSpace>org.sympa.client.ws.axis.v544</packageSpace>
              <namespaceToPackage>http://demo.sympa.org/sympa/wsdl=org.sympa.client.ws.axis.v544</namespaceToPackage>
              <testCases>false</testCases>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>wsdl2java</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <packagingExcludes>**/tomcat-*.jar,
                        **/*.yml,
                        **/logback-*.xml,
                        **/application*.example,
                        **/*Test.class,</packagingExcludes>
                    <warSourceExcludes>src/,
                        public/,
                        tests/</warSourceExcludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>2.11</version>
                <configuration>
                    <header>etc/header.template</header>
                    <properties>
                        <owner>GIP-RECIA</owner>
                        <website>https://www.recia.fr/</website>
                    </properties>
                    <includes>
                        <include>**/*.java</include>
                        <include>src/**/*.xml</include>
                        <include>**/*.properties</include>
                        <include>src/test/**</include>
                        <include>**/*.js</include>
                        <include>**/*.css</include>
                    </includes>
                    <excludes>
                        <exclude>src/test/resources/json/**</exclude>
                        <exclude>.mvn/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jasig.maven</groupId>
                <artifactId>notice-maven-plugin</artifactId>
                <version>2.0.0</version>
                <configuration>
                    <noticeTemplate>etc/NOTICE.template</noticeTemplate>
                    <licenseMapping>
                        <param>/etc/license-mappings.xml</param>
                    </licenseMapping>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
